bugs have been fixed- css gaps fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,31 +7,15 @@
 }
 
 .bg-color-three-reasons {
-    background-color: #ffffff;
+    background-color: #fff;
 }
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
 }
 
-.bg-color-skills {
-    background-color: #ffffff;
-}
-
 .bg-color-work-history {
     background-color: #9b59b6;
-}
-
-.bg-color-contact {
-    background-color: #ffffff;
-}
-
-.bg-color-conferences {
-    background-color: #f4f4f4;
-}
-
-.bg-color-groups {
-    background-color: #ffffff;
 }
 
 .ui-menu-color-home {
@@ -47,9 +31,8 @@
 }
 
 .ui-menu-color-download {
-    background-color: #d9a81d;
+    background-color: #525252;
 }
-
 
 .ui-menu-color-github {
     background-color: #1c4a6c;
@@ -59,18 +42,24 @@
     background-color: #e74c3c;
 }
 
-
-
-
-body {
-    font-family: Roboto, sans-serif;
-    font-weight: 300;
-    background-color: #525252;
-    color: #555555;
+.row-table {
+    display: table;
 }
 
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
 
-/*--------------------------------------------Special Paddings/Margins/Text*/
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+/* ----------------------------------------Special paddings/margins/text */
 
 h1,
 h2,
@@ -93,9 +82,14 @@ h4 {
     display: inline-block;
 }
 
-
 .row-table {
     display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
 }
 
 .history-heading,
@@ -105,7 +99,6 @@ h4 {
     margin-top: 25px;
     margin-bottom: 40px;
 }
-
 
 /*--------------------------------------------Heading*/
 
@@ -133,7 +126,7 @@ header {
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
-    color: #ffffff;
+    color: #fff;
 }
 
 .title {
@@ -142,15 +135,24 @@ header {
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
-    color: #ffffff;
+    color: #fff;
+}
+
+.list-inline-item:not(:last-child) {
+    margin: 0;
+}
+
+.menucontainer {
+    font-size: 0;
+}
+
+#nav li {
+    font-size: 14px;
+    padding: 0;
 }
 
 #nav {
     margin: 0;
-}
-
-#nav li {
-    padding: 0;
 }
 
 .menuitem {
@@ -162,10 +164,9 @@ header {
 .menuitem a {
     width: 100%;
     text-decoration: none;
-    color: #ffffff;
+    color: #fff;
     height: 120px;
 }
-
 
 .menuitem a i {
     padding-top: 22px;
@@ -185,7 +186,6 @@ header {
     letter-spacing: 2px;
 }
 
-
 /*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
@@ -193,8 +193,7 @@ header {
     height: 120px;
 }
 
-
-/*--------------------------------------------Footer*/
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -203,19 +202,19 @@ footer {
     margin: 0;
 }
 
-footer .cv-pdf i {
+.cv-pdf i {
+    font-size: 18px;
     color: #fafafa;
     text-align: center;
-    font-size: 18px;
     padding-left: 5px;
-}
-
-footer .cv-pdf i:hover {
-    color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
+}
+
+.cv-pdf i:hover {
+    color: #e84610;
 }
 
 .social-links {
@@ -243,10 +242,10 @@ footer .cv-pdf i:hover {
 }
 
 #footer-details {
-    margin: 20px;
+    padding: 20px;
 }
 
-/*--------------------------------------------Three Reasons*/
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
     font-size: 26px;
@@ -257,7 +256,7 @@ footer .cv-pdf i:hover {
     margin-bottom: 15px;
 }
 
-/*--------------------------------------------Personal Info*/
+/* ----------------------------------------Personal Info */
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -268,6 +267,7 @@ footer .cv-pdf i:hover {
 .personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
+    display: inline-block;
 }
 
 .personal-info-item .key p,
@@ -276,7 +276,6 @@ footer .cv-pdf i:hover {
 }
 
 .personal-info-item .key {
-    display: inline-block;
     width: 30%;
     margin-right: 21px;
     padding-top: 2px;
@@ -288,16 +287,16 @@ footer .cv-pdf i:hover {
 }
 
 .personal-info-item .value {
-    display: inline-block;
     position: relative;
     width: 60%;
 }
 
-/*--------------------------------------------Skills*/
+/* ----------------------------------------Skills */
 
 .progress {
     position: relative;
     height: 25px;
+    margin-bottom: 4px;
 }
 
 .progress-type {
@@ -309,13 +308,16 @@ footer .cv-pdf i:hover {
     background-color: rgba(25, 25, 25, 0.2);
 }
 
-
 .progress-section {
     margin: 40px 20px;
 }
 
+/* ----------------------------------------Work History */
 
-/*--------------------------------------------Work History*/
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -329,7 +331,7 @@ footer .cv-pdf i:hover {
     margin: 0;
 }
 
-.timeline-item::before {
+.timeline-item:before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
@@ -337,12 +339,12 @@ footer .cv-pdf i:hover {
     display: block;
     font-family: "Exo", sans-serif;
     font-weight: 500;
-    font-size: .8em;
+    font-size: 0.8em;
     padding: 0;
     margin: 0;
 }
 
-.timeline-item::after {
+.timeline-item:after {
     width: 12px;
     height: 12px;
     display: block;
@@ -352,11 +354,6 @@ footer .cv-pdf i:hover {
     border-radius: 12px;
     content: '';
     background: #fafafa;
-}
-
-.history-heading {
-    color: #fafafa;
-    margin-bottom: 50px;
 }
 
 .history-items {
